--- a/docs/package.json
+++ b/docs/package.json
@@ -1,24 +1,22 @@
 {
   "name": "@twapi/docs",
-  "version": "1.0.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "next dev --port 3001",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "^13.4.1",
+    "next": "^13.0.6",
+    "nextra": "latest",
+    "nextra-theme-docs": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@twapi/eslint-config-custom": "workspace:*",
-    "@twapi/tsconfig": "workspace:*",
-    "typescript": "^4.5.3"
+    "@twapi/tsconfig": "workspace:^",
+    "@types/node": "18.11.10",
+    "@types/react": "^18.2.14",
+    "typescript": "^4.9.3"
   }
 }
