--- a/packages/eventsub/package.json
+++ b/packages/eventsub/package.json
@@ -6,7 +6,7 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "dev": "tsup --watch",
+    "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "test": "vitest run",
     "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings 0"
@@ -22,6 +22,7 @@
     "@twapi/tsconfig": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/ws": "^8.5.5",
+    "axios": "^1.4.0",
     "eslint": "^7.32.0",
     "tsup": "^7.1.0",
     "vitest": "^0.32.2",
