--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "ci": "pnpm run build && pnpm run lint && pnpm run test"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
