@twapi/eventsub: Added listeners and executing them

--- a/packages/eventsub/package.json
+++ b/packages/eventsub/package.json
@@ -21,10 +21,12 @@
     "@twapi/eslint-config-custom": "workspace:^",
     "@twapi/tsconfig": "workspace:*",
     "@types/node": "^17.0.12",
+    "@types/uuid": "^9.0.2",
     "@types/ws": "^8.5.5",
     "axios": "^1.4.0",
     "eslint": "^7.32.0",
     "tsup": "^7.1.0",
+    "uuid": "^9.0.0",
     "vitest": "^0.32.2",
     "ws": "^8.13.0"
   },
