@twapi/eventsub: refactor filer structure

--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,7 @@
       "cache": false
     },
     "test": {
-      "dependsOn": ["build"]
+      "dependsOn": ["^build"]
     }
   },
   "globalEnv": ["SAMPLE_OAUTH_TOKEN", "CLIENT_ID"]
