--- a/packages/eventsub/package.json
+++ b/packages/eventsub/package.json
@@ -9,7 +9,8 @@
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "test": "vitest run",
-    "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings 0"
+    "lint": "eslint \"**/*.{ts,tsx}\" --max-warnings 0",
+    "typecheck": "tsc --noEmit"
   },
   "files": [
     "dist"
