--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@twapi/docs",
   "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
