--- a/packages/eventsub/package.json
+++ b/packages/eventsub/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@twapi/eventsub",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Interact with twitch EventSub system",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "private": false,
   "scripts": {
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "build": "tsup src/index.ts --format cjs,esm --dts",
