@twapi/pubsub: made pubsub private for dev

--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "private": false,
+  "private": true,
   "scripts": {
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "build": "tsup src/index.ts --format cjs,esm --dts",
