--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -22,8 +22,10 @@
     "@twapi/logger": "workspace:^",
     "@twapi/tsconfig": "workspace:^",
     "@types/node": "^20.4.2",
+    "@types/uuid": "^9.0.2",
     "@types/ws": "^8.5.5",
     "tsup": "^7.1.0",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
 }
