--- a/packages/eventsub/package.json
+++ b/packages/eventsub/package.json
@@ -27,6 +27,7 @@
     "@types/ws": "^8.5.5",
     "axios": "^1.4.0",
     "eslint": "^7.32.0",
+    "isomorphic-ws": "^5.0.0",
     "tsup": "^7.1.0",
     "uuid": "^9.0.0",
     "vitest": "^0.32.2",
