--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@twapi/pubsub",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Interact with twitch PubSub system",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "tsup src/index.ts --format cjs,esm --dts --watch",
     "build": "tsup src/index.ts --format cjs,esm --dts",
