@twapi/auth: build fix

--- a/examples/auth/package.json
+++ b/examples/auth/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "@twapi/tsconfig": "workspace:^",
     "@types/node": "^20.4.8",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "tsup": "^7.1.0"
   },
   "dependencies": {
     "@twapi/auth": "workspace:^"
