--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@twapi/auth",
-  "version": "0.0.0",
-  "description": "Auth provider for all the other packages",
+  "version": "0.1.0",
+  "description": "Auth provider for all other packages",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "private": true,
+  "private": false,
   "files": [
     "dist"
   ],
