--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -19,6 +19,7 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@twapi/auth": "workspace:^",
     "@twapi/logger": "workspace:^",
     "@twapi/tsconfig": "workspace:^",
     "@types/node": "^20.4.2",
