--- a/packages/config/tsconfig/package.json
+++ b/packages/config/tsconfig/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@twapi/tsconfig",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "license": "MIT",
   "publishConfig": {
     "access": "public"
