--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,13 +19,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@twapi/auth": "workspace:^",
-    "@twapi/logger": "workspace:^",
-    "@twapi/tsconfig": "workspace:^",
     "@types/node": "^20.4.2",
     "@types/retry": "^0.12.2",
     "cross-fetch": "^4.0.0",
     "retry": "^0.13.1",
     "tsup": "^7.1.0"
+  },
+  "dependencies": {
+    "@twapi/auth": "0.2.3",
+    "@twapi/logger": "1.0.1",
+    "@twapi/tsconfig": "0.1.0"
   }
 }
