--- a/packages/pubsub/package.json
+++ b/packages/pubsub/package.json
@@ -19,9 +19,6 @@
   ],
   "license": "ISC",
   "devDependencies": {
-    "@twapi/auth": "workspace:^",
-    "@twapi/logger": "workspace:^",
-    "@twapi/tsconfig": "workspace:^",
     "@types/node": "^20.4.2",
     "@types/uuid": "^9.0.2",
     "@types/ws": "^8.5.5",
@@ -29,5 +26,10 @@
     "tsup": "^7.1.0",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
+  },
+  "dependencies": {
+    "@twapi/auth": "0.2.3",
+    "@twapi/logger": "1.0.1",
+    "@twapi/tsconfig": "0.1.0"
   }
 }
