--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "ci": "pnpm run build && pnpm run lint && pnpm run test",
+    "turbo": "turbo",
     "release": "pnpm run build && pnpm run lint && pnpm run test && changeset publish"
   },
   "devDependencies": {
